fix collapsing margin

--- a/style.css
+++ b/style.css
@@ -205,3 +205,7 @@ input[type=submit]:hover {
     height: 90%;
     border: 0;
 }
+
+#footer {
+    overflow: hidden;
+}
